<resources>
    <!--按钮名称-->
    <string name="back">返回</string>
    <string name="hint">提示</string>
    <string name="index">首页</string>
    <string name="mine">我的</string>
    <string name="notify">通知 ：</string>
    <string name="login">登  录</string>
    <string name="submit">提  交</string>
    <string name="confirm">确定</string>
    <string name="register">注册</string>
    <string name="share_gain">分润</string>
    <string name="next_step">下一步</string>
    <string name="app_name">米仓伙伴1</string>
    <string name="agree">已阅读并同意遵守</string>
    <string name="agree_and_register">同意并注册</string>
    <string name="protocol">《米仓伙伴用户协议与隐私条款》</string>
    <string name="immediate_login">已有账号？立即登录</string>


    <!--密码类-->
    <string name="pwd_find">找回密码</string>
    <string name="pwd_input">请新输入密码(至少8位)</string>
    <string name="pwd_forgot">忘记密码?</string>
    <string name="pwd_confirm">请再次输入密码</string>
    <string name="pwd_remember">记住密码</string>
    <string name="pwd_not_empty">密码不能为空</string>
    <string name="pwd_alter_success">密码修改成功</string>
    <string name="pwd_not_equal">两次密码不一致,请重新输入</string>
    <string name="pwd_register_input">请输入密码(密码最少8位)</string>

    <!--输入框提示类-->
    <string name="edit_username">请输入姓名</string>
    <string name="username_input">请输入手机号</string>
    <string name="edit_invite_code">请输入邀请码</string>
    <string name="input_right_phone">请输入正确的手机号</string>

    <!--账号类-->
    <string name="username_login_success">登录成功</string>
    <string name="username_not_empty">手机号不能为空</string>
    <string name="username_register">没有账号？去注册</string>

    <!--验证类-->
    <string name="test_code">获取验证码</string>
    <string name="test_code_input">验证码</string>
    <string name="test_code_request_again">重新获取</string>
    <string name="test_code_not_empty">验证码不能为空</string>

    <!--网络请求字段-->
    <string name="result">result</string>
    <string name="equipment_not_identical">设备不匹配</string>
    <string name="connect_fail">网络请求失败,请检查网络</string>
    <string name="equipment_not_identical_hint">"检测到您在新设备上登录，是否重新登录？"</string>
    <string name="equipment_not_empty">"设置ID不能为空(IMES)"</string>

    <!--机具兑换-->
    <string name="machine_info_left">极速秒到</string>
    <string name="machine_info_left1">费率0.65%+3</string>
    <string name="machine_info_left2">到账T+1</string>
    <string name="machine_info_left3">扫码费率 0.38%</string>
    <string name="machine_name_left">支付通</string>
    <string name="machine_info_right1">信用卡</string>
    <string name="machine_info_right">费率0.69%+3</string>
    <string name="machine_info_right2">到账T+1</string>
    <string name="machine_info_right3">20元封顶</string>
    <string name="machine_name_right">海科融通传统POS机</string>

    <string name="share_machine">分享购机获得奖金红包</string>
    <string name="share_price">500元新手礼包等你来拿</string>
    <string name="live">惠享生活</string>
</resources>
