<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">
     <ImageView
         android:adjustViewBounds="true"
         android:src="@mipmap/login_img"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
    <LinearLayout
        style="@style/_marginTop_20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            style="@style/gravity_center"
            android:src="@mipmap/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            style="@style/_12sp"
            android:id="@+id/username_et"
            android:inputType="number"
            android:hint="@string/username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        style="@style/_60dp_15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            style="@style/gravity_center"
            android:src="@mipmap/lock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            style="@style/_12sp"
            android:id="@+id/password_et"
            android:hint="@string/pwd_input"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
     <!--若账号在新设备上登录,需要验证码,将其显示-->
    <LinearLayout
        android:id="@+id/test_ll"
        android:visibility="gone"
        style="@style/_60dp_15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            style="@style/gravity_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/test_code"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:hint="@string/test_code_input"
                    android:id="@+id/test_code"
                    android:inputType="number"
                    style="@style/font_15sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/request_test_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/_15sp_1"
                    android:text="@string/test_code" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/login_tv"
        android:layout_marginTop="@dimen/_20dp"
        android:background="@drawable/login_selector"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45dp"
        style="@style/_60dp_15sp"
        android:gravity="center"
        android:textSize="@dimen/_15sp"
        android:text="@string/login"
        android:textColor="@color/white" />
    <LinearLayout
        style="@style/_60dp_15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/remember_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pwd_remember"
            style="@style/gray"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/forgot_pwd"
            android:textColor="@color/colorAccent"
            android:text="@string/pwd_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:gravity="center|bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/register_tv"
            android:textSize="@dimen/_15sp"
            android:paddingTop="@dimen/_60dp"
            android:paddingBottom="@dimen/_20dp"
            android:textColor="@color/colorAccent"
            android:text="@string/username_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>