<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.Register1Activity">

    <include layout="@layout/title_ber" />

    <com.mic.zl.micangpartner.view.CircleImageView
        android:layout_width="@dimen/_80dp"
        android:layout_height="@dimen/_80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_20dp"
        android:src="@mipmap/ic_launcher" />
    <ImageView
        android:layout_gravity="center"
        android:layout_margin="@dimen/_20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/point2_img"/>
    <LinearLayout
        style="@style/_60dp_15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            style="@style/gravity_center"
            android:src="@mipmap/lock_re"/>
        <EditText
            style="@style/_12sp"
            android:id="@+id/register_pwd_et"
            android:inputType="textWebPassword"
            android:hint="@string/pwd_register_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        style="@style/_60dp_15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            style="@style/gravity_center"
            android:src="@mipmap/lock"/>
        <EditText
            style="@style/_12sp"
            android:id="@+id/register_pwd_again_et"
            android:inputType="textPassword"
            android:hint="@string/pwd_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        style="@style/_60dp_15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            style="@style/gravity_center"
            android:src="@mipmap/plane"/>
        <EditText
            style="@style/_12sp"
            android:id="@+id/register_invite_code_et"
            android:inputType="text"
            android:hint="@string/edit_invite_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <TextView
        android:id="@+id/agree_and_register_tv"
        android:layout_marginTop="@dimen/_20dp"
        android:background="@drawable/login_selector"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45dp"
        android:textSize="@dimen/_15sp"
        style="@style/_60dp_15sp"
        android:gravity="center"
        android:text="@string/agree_and_register"
        android:textColor="@color/white" />
    <LinearLayout
        style="@style/_60dp_15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/agree_cb"
            android:textSize="@dimen/_10dp"
            android:textColor="@color/gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agree" />
        <TextView
            android:id="@+id/protocol_tv"
            android:textColor="@color/shallow_purple"
            android:textSize="@dimen/_10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/protocol"/>
    </LinearLayout>
    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/immediate_login_tv"
            android:layout_gravity="bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_15sp"
            android:paddingBottom="@dimen/_20dp"
            android:text="@string/immediate_login"/>
    </LinearLayout>



</LinearLayout>