<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/_10dp"
    android:layout_marginLeft="@dimen/_5dp"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:id="@+id/machine_layout_right"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:background="@mipmap/goods_bigpos_bg"
        android:layout_width="@dimen/_178dp"
        android:layout_height="@dimen/_350dp">
        <LinearLayout
            style="@style/machine_exchange_layout"
            android:layout_above="@+id/tie_fy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                style="@style/machine_exchange_image"
                android:src="@mipmap/goods_msg_bp1"/>
            <TextView
                android:id="@+id/goods_info_right1_tv"
                style="@style/machine_exchange_text"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/machine_info_right1"/>
            <TextView
                android:id="@+id/goods_info_right_tv"
                style="@style/machine_exchange_text"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/machine_info_right"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/tie_fy"
            android:layout_above="@+id/scan_ly"
            style="@style/machine_exchange_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                style="@style/machine_exchange_image"
                android:src="@mipmap/goods_msg_bp2"/>
            <TextView
                android:id="@+id/goods_info_tv_left2"
                style="@style/machine_exchange_text"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/machine_info_right2"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/scan_ly"
            style="@style/machine_exchange_layout"
            android:paddingBottom="@dimen/_15dp"
            android:layout_above="@+id/price_ly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                style="@style/machine_exchange_image"
                android:src="@mipmap/goods_msg_bp3"/>
            <TextView
                android:id="@+id/goods_info_tv_right3"
                style="@style/machine_exchange_text"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/machine_info_right3"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/price_ly"
            android:layout_centerInParent="true"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/machine_price_right_tv"
                android:layout_gravity="center"
                android:paddingBottom="@dimen/_5dp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="￥0.01"/>
        </LinearLayout>
    </RelativeLayout>
        <TextView
            android:id="@+id/machine_name_right_tv"
            android:layout_marginTop="@dimen/_5dp"
            android:background="@mipmap/goods_bigpos_button"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_width="@dimen/_178dp"
            android:layout_height="@dimen/_45dp"
            android:text="@string/machine_name_right"/>
</LinearLayout>
