<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:background="@drawable/layout_bottom_border"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_36dp">
        <TextView
            android:id="@+id/index_iv"
            android:layout_centerInParent="true"
            android:textSize="@dimen/_17sp"
            android:textColor="@color/welcome_background_black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/index"/>
        <ImageView
            android:id="@+id/notify_img"
            android:layout_alignBottom="@+id/index_iv"
            android:layout_marginRight="@dimen/_10dp"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/notify_img"/>
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.loopj.android.image.SmartImageView
                    android:id="@+id/banner_background"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_140dp"
                    android:scaleType="fitXY"/>

                <android.support.v4.view.ViewPager
                    android:id="@+id/banner_img"
                    android:clipToPadding="false"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_164dp"
                    android:paddingStart="@dimen/_30dp"
                    android:paddingEnd="@dimen/_30dp"
                    android:paddingTop="@dimen/_10dp"
                    android:paddingBottom="@dimen/_10dp"/>

                <LinearLayout
                    android:layout_below="@+id/banner_img"
                    android:paddingBottom="@dimen/_10dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioGroup
                        android:id="@+id/banner_dot_rg"
                        android:layout_gravity="center"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/notify_layout"
                android:background="@color/white"
                android:paddingTop="@dimen/_10dp"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/_10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/_20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/voice_img"/>
                <TextView
                    android:id="@+id/notify_title_tv"
                    android:text="@string/notify"
                    android:paddingLeft="@dimen/_5dp"
                    android:textColor="@color/welcome_background_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/notify_text_tv"
                    android:text="@string/machine_name_right"
                    android:singleLine="true"
                    android:layout_marginRight="@dimen/_20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <View
                    android:background="@drawable/layout_bottom_border"
                    android:layout_marginLeft="@dimen/_15dp"
                    android:layout_marginRight="@dimen/_15dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </LinearLayout>

            <LinearLayout
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1dp">
                <View
                    android:background="@color/shallow_gray"
                    android:layout_marginLeft="@dimen/_20dp"
                    android:layout_marginRight="@dimen/_20dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:background="@color/white"
                android:id="@+id/recycler_img"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_178dp"/>
           <!--
            <LinearLayout
                android:id="@+id/update_layout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150dp"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/update_img"
                    android:layout_width="@dimen/_15dp"
                    android:layout_height="@dimen/_15dp"
                    android:src="@mipmap/update_img" />

                <TextView
                    android:id="@+id/update_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10dp"
                    android:text="获取主页信息失败，点击重试"
                    android:textSize="@dimen/_15sp" />
            </LinearLayout>-->
            <RelativeLayout
                android:background="@color/white"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_marginBottom="@dimen/_10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="@dimen/_15dp"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textColor="@color/black"
                        android:textSize="@dimen/_17sp"
                        android:text="@string/share_machine"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:textSize="@dimen/_15sp"
                        android:textColor="@color/gray"
                        android:text="@string/share_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <ImageView
                    android:layout_centerVertical="true"
                    android:layout_marginRight="@dimen/_20dp"
                    android:layout_alignParentRight="true"
                    android:src="@mipmap/redpk_img"
                    android:layout_width="@dimen/_108dp"
                    android:layout_height="@dimen/_60dp" />
            </RelativeLayout>

            <LinearLayout
                android:padding="@dimen/_10dp"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <View
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/_10dp"
                    android:layout_width="2dp"
                    android:layout_height="@dimen/_12dp"
                    android:background="@color/colorAccent"/>
                <TextView
                    android:textSize="@dimen/_12sp"
                    android:padding="@dimen/_5dp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/live"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <ImageView
                android:adjustViewBounds="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@mipmap/jifen_share_img" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>