<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">
    <FrameLayout
        android:id="@+id/replace_fl"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </FrameLayout>

    <!--最外层-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/layout_top_border"
        android:orientation="horizontal">
        <!--第二层:首页-->
        <LinearLayout
            android:id="@+id/index_ll"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/_5dp"
            android:layout_marginBottom="@dimen/_5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <!--第三层-->
            <LinearLayout
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/index_iv"
                    android:layout_gravity="center"
                    android:src="@mipmap/mall_img_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/index_tv"
                    android:text="@string/index"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <!--第二层:分润-->
        <LinearLayout
            android:id="@+id/share_gain_ll"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/_5dp"
            android:layout_marginBottom="@dimen/_5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <!--第三层-->
            <LinearLayout
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/share_gain_iv"
                    android:layout_gravity="center"
                    android:src="@mipmap/find_img_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/share_gain_tv"
                    android:text="@string/share_gain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <!--第二层:我的-->
        <LinearLayout
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/_5dp"
            android:layout_marginBottom="@dimen/_5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <!--第三层-->
            <LinearLayout
                android:id="@+id/mine_ll"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/mine_iv"
                    android:layout_gravity="center"
                    android:src="@mipmap/own_img_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/mine_tv"
                    android:text="@string/mine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>